<resources>
    <string name="app_name">ЖКХ</string>
    <string name="notice_text">ИЗВЕЩЕНИЕ</string>
    <string name="receipt_text">КВИТАНЦИЯ</string>
    <string name="payer_signature_text">Подпись плательщика</string>
    <string name="payment_type_text">Вид оплаты</string>
    <string name="amount_of_payment_text">Сумма платежа</string>
    <string name="payer_text">Плательщик</string>
    <string name="rent_text">Квартплата</string>
    <string name="electricity_text">Эл. энергия</string>
    <string name="gas_text">Газ</string>
    <string name="cold_water_text">Вода</string>
    <string name="waste_text">Стоки</string>
    <string name="heating_text">Отопление</string>
    <string name="hot_water_text">Горячая вода</string>
    <string name="garbage_text">Вывоз мусора</string>
    <string name="doorphone_text">Домофон</string>
    <string name="phone_text">Телефон</string>
    <string name="ugso_text">УГСО</string>
    <!--МЕНЮ плательщика -->
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="select_all">Выбрать все</string>
    <!--МЕНЮ: -->
    <!--плательщика -->
    <string name="new_payer_menu_item">Новый плательщик</string>
    <!--услуги -->
    <string name="new_service_menu_item">Новая услуга</string>
    <!--СПИСОК: -->
    <!--плательщиков -->
    <string name="payer_list_empty_text">Плательщиков пока нет. Добавте, пожалуйста, хотя бы одного</string>
    <!--услуги -->
    <string name="service_list_empty_text">Услуг пока нет. Добавте, пожалуйста, хотя бы одну</string>
    <!--ФОРМА: -->
    <!--плательщика -->
    <string name="payer_subheader">Данные плательщика</string>
    <string name="erc_code_hint">Код ЕРЦ</string>
    <string name="full_name_hint">Фамилия и инициалы</string>
    <string name="address_hint">Адрес</string>
    <string name="total_area_hint">Общая площадь</string>
    <string name="living_space_hint">Жилая площадь</string>
    <string name="heated_volume_hint">Отапливаемый объём</string>
    <string name="payment_day_hint">Крайнее число оплаты услуг</string>
    <string name="payment_day_helper">Любое число месяца с 1-го по 28-е</string>
    <string name="payer_properties_label">Дополнительные параметры</string>
    <string name="persons_num_hint">Кол-во прописанных человек</string>
    <!--услуги -->
    <string name="service_subtitle">Данные услуги</string>
    <string name="display_pos_hint">№ п/п</string>
    <string name="display_name_hint">Наименование</string>
    <string name="service_descr_hint">Описание</string>
    <string name="is_allocate_rate_hint">Распределять тариф</string>

    <!--СООБЩЕНИЯ ОБ ОШИБКАХ -->
    <string name="erc_code_empty_error">Укажите, пожалуйста, код ЕРЦ!</string>
    <string name="full_name_empty_error">Укажите, пожалуйста, фамилию и инициалы!</string>
    <string name="address_empty_error">Укажите, пожалуйста, адрес!</string>
    <string name="persons_num_empty_error">Укажите, пожалуйста, кол-во прописанных человек!</string>
    <string name="payment_day_empty_error">Укажите, пожалуйста, крайнее число оплаты!</string>
    <string name="number_negative_error">Укажите, пожалуйста, положительное число!</string>
    <string name="display_pos_empty_error">Укажите, пожалуйста, порядковый номер услуги!</string>
    <string name="display_name_empty_error">Укажите, пожалуйста, наименование услуги!</string>

    <!--ЕДИНИЦЫ ИЗМЕРЕНИЯ -->
    <string name="m2_unit">м2</string>
    <string name="m3_unit">м3</string>
</resources>