<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/payer_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <!--    <com.google.android.material.divider.MaterialDivider
                android:id="@+id/payer_divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/payer_subheader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payer_label"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/payer_divider" /> -->
        <!--style="?android:listSeparatorTextViewStyle"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/erc_code_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/outline_123_black_24">
            <!--app:layout_constraintTop_toBottomOf="@+id/payer_subheader"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/erc_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/erc_code_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="15"
                android:singleLine="true">

                <requestFocus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/erc_code_layout"
            app:startIconDrawable="@drawable/outline_person_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_layout"
            app:startIconDrawable="@drawable/outline_house_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:minLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_area_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_layout"
            app:startIconDrawable="@drawable/outline_space_dashboard_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_area_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_area_hint"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/living_space_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_area_layout"
            app:startIconDrawable="@drawable/outline_aspect_ratio_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/living_space_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/living_space_hint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heated_volume_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/living_space_layout"
            app:startIconDrawable="@drawable/outline_outbox_black_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heated_volume_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/heated_volume_hint"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/payer_property_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heated_volume_layout" />

        <TextView
            android:id="@+id/payer_property_subheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/payer_properties_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payer_property_divider" />
        <!--style="?android:listSeparatorTextViewStyle"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/payment_day_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/payment_day_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payer_property_subheader"
            app:startIconDrawable="@drawable/outline_calendar_month_black_24">

            <AutoCompleteTextView
                android:id="@+id/payment_day_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/persons_num_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_day_layout"
            app:startIconDrawable="@drawable/outline_wc_black_24">
            <!--app:layout_constraintTop_toBottomOf="@+id/payer_property_subheader"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/persons_num_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/persons_num_hint"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>